# cmake-example

./: CMakeLists.txt
liblib/: CMakeLists.txt  lib.c  lib.h
libpci/: CMakeLists.txt
src/: hello.c
